<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.details.ShowDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bannerSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/showBanner"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/showName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/showBanner"
                app:layout_constraintStart_toStartOf="@id/showBanner"
                app:layout_constraintTop_toBottomOf="@id/showBanner"
                tools:text="The Last Of Us" />

            <TextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showName"
                tools:text="When you're lost in the darkness, look for the light" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/whereToWatchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/where_to_watch_text"
            app:layout_constraintBottom_toTopOf="@id/whereToWatchSection"
            app:layout_constraintEnd_toEndOf="@id/whereToWatchSection"
            app:layout_constraintTop_toBottomOf="@id/bannerSection" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/whereToWatchSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/whereToWatchText">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewNetworks"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/createdByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/created_by_text"
            app:layout_constraintBottom_toTopOf="@id/createdBySection"
            app:layout_constraintStart_toStartOf="@id/createdBySection"
            app:layout_constraintTop_toBottomOf="@id/bannerSection" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/createdBySection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createdByText">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCreatedBy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/generalSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createdBySection">

            <TextView
                android:id="@+id/inProduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="In production?: Yes" />

            <TextView
                android:id="@+id/numberOfSeasons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inProduction"
                tools:text="Number of seasons: 1" />

            <TextView
                android:id="@+id/numberOfEpisodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberOfSeasons"
                tools:text="Number of episodes: 9" />

            <TextView
                android:id="@+id/avgEpisodeRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberOfEpisodes"
                tools:text="Average episode runtime: 59"/>

            <TextView
                android:id="@+id/languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avgEpisodeRuntime"
                tools:text="Languages: "/>

            <TextView
                android:id="@+id/airDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/languages"
                tools:text="Air date: 2023-12-03"/>

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/airDate"
                tools:text="Genre: "/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/dividerForOverviewSection"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/generalSection" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/overviewSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/dividerForOverviewSection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/overviewSectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/overviewSectionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/overviewSectionTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Twenty years after modern civilization has been destroyed, Joel, a hardened survivor, is hired to smuggle Ellie, a 14-year-old girl, out of an oppressive quarantine zone. What starts as a small job soon becomes a brutal, heartbreaking journey, as they both must traverse the United States and depend on each other for survival."/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/dividerForLastEpisodeToAirSection"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overviewSection" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lastEpisodeToAirSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/dividerForLastEpisodeToAirSection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/lastEpisodeToAirTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_episode_to_air_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/episodeBanner"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastEpisodeToAirTitle" />

            <TextView
                android:id="@+id/lastEpisodeToAirName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/episodeBanner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="When We Are in Need"/>

            <TextView
                android:id="@+id/lastEpisodeToAirNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/lastEpisodeToAirName"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Episode number: 8"/>

            <TextView
                android:id="@+id/lastEpisodeToAirAirDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/lastEpisodeToAirNumber"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Episode air date: 2023-03-05"/>

            <TextView
                android:id="@+id/lastEpisodeToAirRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/lastEpisodeToAirAirDate"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Episode runtime: 52"/>

            <TextView
                android:id="@+id/lastEpisodeToAirOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/episode_synopsis_title"
                app:layout_constraintTop_toBottomOf="@id/lastEpisodeToAirRuntime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/lastEpisodeToAirOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/lastEpisodeToAirOverviewTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="After crossing paths with a vengeful group of survivors, Ellie's fighting spirit draws unwanted attention from its leader. Still battling for his life, a weakened Joel faces off with a hunting party out for blood."/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>